auth fully finished except file upload. file upload working but if avatas is nil, i must generate a new profile picture using users first and last names firt letters
