# internal/controller/http/models/auth.go
@@ -1,20 +1,14 @@
 package models
 
-type RegisterUser struct {
-	FirstName   string `json:"first_name"`
-	LastName    string `json:"last_name"`
-	PhoneNumber string `json:"phone_number"`
+import "tarkib.uz/internal/entity"
+
+type LoginRequest struct {
 	NickName    string `json:"nickname"`
+	PhoneNumber string `json:"phone_number"`
 	Password    string `json:"password"`
-	Avatar      string `json:"avatar"`
 }
 
-type VerifyUser struct {
-	PhoneNumber string
-	Code        string
-}
-
-type VerifyUserResponse struct {
+type LoginUser struct {
 	ID          string
 	FirstName   string
 	LastName    string
@@ -22,17 +16,39 @@ type VerifyUserResponse struct {
 	NickName    string
 	Password    string
 	Avatar      string
-	AccessToken string
+}
+
+type LoginResponse struct {
+	AccessToken string    `json:"access_token"`
+	User        LoginUser `json:"user"`
+}
+
+type RegisterUser struct {
+	FirstName   string `json:"first_name"`
+	LastName    string `json:"last_name"`
+	NickName    string `json:"nickname"`
+	PhoneNumber string `json:"phone_number"`
+	Password    string `json:"password"`
+	Avatar      string `json:"avatar"`
+}
+
+type VerifyUser struct {
+	PhoneNumber string `json:"phone_number"`
+	Code        string `json:"code"`
+}
+
+type VerifyUserResponse struct {
+	User *entity.User `json:"user"`
 }
 
 type ForgotPasswordRequest struct {
-	PhoneNumber string `json:"phone_number" binding:"required"`
+	PhoneNumber string `json:"phone_number"`
 }
 
 type ResetPasswordRequest struct {
-	PhoneNumber string `json:"phone_number" binding:"required"`
-	Code        string `json:"code" binding:"required"`
-	NewPassword string `json:"new_password" binding:"required"`
+	PhoneNumber string `json:"phone_number"`
+	Code        string `json:"code"`
+	NewPassword string `json:"new_password"`
 }
 
 type ResetPasswordResponse struct {
