# internal/entity/user.go
@@ -8,7 +8,7 @@ type User struct {
 	NickName    string
 	Password    string
 	Avatar      string
-	AccessToken      string
+	AccessToken string
 }
 
 type UserForRedis struct {
@@ -36,4 +36,25 @@ type VerifyUserResponse struct {
 	Password    string
 	Avatar      string
 	AccessToken string
+}
+
+type LoginUser struct {
+	ID          string
+	FirstName   string
+	LastName    string
+	PhoneNumber string
+	NickName    string
+	Password    string
+	Avatar      string
+}
+
+type LoginRequest struct {
+	NickName    string `json:"nickname"`
+	PhoneNumber string `json:"phone_number"`
+	Password    string `json:"password"`
+}
+
+type LoginResponse struct {
+	AccessToken string    `json:"access_token"`
+	User        LoginUser `json:"user"`
 }
